--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 "aniso8601" = "==0.82"
-"jinja2" = "==2.10"
+jinja2 = "==2.10.1"
 "psycopg2" = "==2.7.4"
 alembic = "==0.9.9"
 anyjson = "==0.3.3"
@@ -14,8 +14,8 @@ babel = "==2.5.3"
 blinker = "==1.4"
 cachetools = "==1.1.5"
 celery = "==4.1.1"
-flask = "==0.12.2"
-flask-admin = "==1.5.1"
+flask = "==0.12.4"
+flask-admin = "==1.5.3"
 flask-assets = "==0.12"
 flask-babelex = "==0.9.3"
 flask-caching = "==1.3.3"
@@ -54,11 +54,11 @@ python-editor = "==1.0.3"
 python-magic = "==0.4.15"
 raven = "==6.6.0"
 regex = "==2018.2.3"
-requests = "==2.6.0"
+requests = "==2.21.0"
 six = "==1.11.0"
 sqlalchemy = "~=1.2"
 sqlalchemy-utils = "==0.33.11"
-tablib = "==0.12.1"
+tablib = "==0.13.0"
 unidecode = "==0.4.21"
 webassets = "==0.12.1"
 werkzeug = "==0.14.1"
